Add endpoint /notification and its handler
