# backend/proxmox_api/swagger/swagger.yaml
@@ -367,6 +367,25 @@ paths:
         "404":
           description: vm not found
       x-openapi-router-controller: proxmox_api.controllers.default_controller
+  /notification:
+    get:
+      summary: Try to fetch a notification to display for the user
+      operationId: get_notification
+      tags:
+          - User
+      responses:
+        "200":
+          description: Notification recieved and ready to be displayed
+          content:
+            application/json:
+              schema:
+                type: array
+                example: 
+                  - 
+                x-content-type: application/json
+        "204":
+          description: "No notificaton"
+      x-openapi-router-controller: proxmox_api.controllers.default_controller
   /historyall:
     get:
       summary: get the ip history of all the vm
